fix alignment issue on project index

--- a/style.css
+++ b/style.css
@@ -337,9 +337,9 @@ section:nth-of-type(1) {
 /* Project Pages */
 
 .project-wrapper {
-    /* width: 100%; */
     height: 50vw;
     position: relative;
+    margin: auto;
     margin-bottom: 2rem;
     background-position: top;
     background-size: cover;
